src/test/deca/syntax/invalid/extension/wrongSelection.deca
{
	int[][] mat = new int[5][];
	mat[3][] = 0;
	
	
}